[package]
name = "export-findmy"
version = "0.1.0"
edition = "2021"
description = "Export AirTag/FindMy accessory private keys from iCloud as hass-FindMy-compatible JSON files"

[dependencies]
rustpush = { git = "https://github.com/MegaMarkey/rustpush.git", branch = "findmy-export-support", default-features = false, features = ["remote-anisette-v3"] }
omnisette = { git = "https://github.com/MegaMarkey/rustpush.git", branch = "findmy-export-support" }
icloud_auth = { git = "https://github.com/MegaMarkey/rustpush.git", branch = "findmy-export-support", default-features = false, features = ["remote-anisette-v3"] }
keystore = { git = "https://github.com/MegaMarkey/rustpush.git", branch = "findmy-export-support" }
cloudkit-proto = { git = "https://github.com/MegaMarkey/rustpush.git", branch = "findmy-export-support" }
tokio = { version = "1", features = ["full"] }
plist = "1.7.0"
sha2 = "0.10.8"
async-trait = "0.1.73"
uuid = { version = "1.4.1", features = ["v4"] }
rand = "0.8.5"
rpassword = "7"
pretty_env_logger = "0.5.0"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
serde_json = "1.0"
